--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -23,10 +23,10 @@
   when: mysql_installed.stat.exists == false or mysql_apt_key.changed or mysql_sources_list.changed
 
 - name: Ensure MySQL Python libraries are installed.
-  apt: "name=python-mysqldb state=installed"
+  apt: "name=python-mysqldb state=present"
 
 - name: Ensure MySQL packages are installed.
-  apt: "name={{ item }} state=installed"
+  apt: "name={{ item }} state=present"
   with_items: "{{ mysql_packages }}"
   register: deb_mysql_install_packages
 
