--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -27,7 +27,7 @@
     deb_mysql_python_package: "{% if 'python3' in ansible_python_interpreter|default('') %}python3-mysqldb{% else %}python-mysqldb{% endif %}"
 
 - name: Ensure MySQL Python libraries are installed.
-  apt: "name={{ deb_mysql_python_package }} state=present"
+  apt: "name=python-mysqldb state=present"
 
 - name: Ensure MySQL packages are installed.
   apt: "name={{ item }} state=present"
